weird stretch issue that I can replicate local

--- a/styles/landing.css
+++ b/styles/landing.css
@@ -53,7 +53,6 @@ body {
       -ms-flex-align: center;
           align-items: center;
   width: 100vw;
-  height: 2000px;
 }
 
 .hamburger {
